--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node src/app.js"
+    "start": "node src/app.js"
   },
-  "keywords": ["express","node","hbs","handlebars","api","weather"],
+  "keywords": [
+    "express",
+    "node",
+    "hbs",
+    "handlebars",
+    "api",
+    "weather"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "hbs": "^4.1.1",
     "request": "^2.88.0"
   }
 }
